; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/network_tests/main/extr_lwip_test_netif.c_testnetif_output.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/network_tests/main/extr_lwip_test_netif.c_testnetif_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netif = type { i32 }
%struct.pbuf = type { i8*, i32 }

@.str = private unnamed_addr constant [13 x i8] c"\0APacketOut:[\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"%02x\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"]\0A\00", align 1
@ERR_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @testnetif_output(%struct.netif* %0, %struct.pbuf* %1) #0 {
  %3 = alloca %struct.netif*, align 8
  %4 = alloca %struct.pbuf*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.netif* %0, %struct.netif** %3, align 8
  store %struct.pbuf* %1, %struct.pbuf** %4, align 8
  %7 = load %struct.pbuf*, %struct.pbuf** %4, align 8
  %8 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %7, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  store i8* %9, i8** %6, align 8
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %5, align 4
  br label %11

11:                                               ; preds = %23, %2
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.pbuf*, %struct.pbuf** %4, align 8
  %14 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = icmp slt i32 %12, %15
  br i1 %16, label %17, label %26

17:                                               ; preds = %11
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds i8, i8* %18, i32 1
  store i8* %19, i8** %6, align 8
  %20 = load i8, i8* %18, align 1
  %21 = sext i8 %20 to i32
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %17
  %24 = load i32, i32* %5, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %5, align 4
  br label %11

26:                                               ; preds = %11
  %27 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0))
  %28 = load i32, i32* @ERR_OK, align 4
  ret i32 %28
}

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
